# REPASO_IB

./: README.md
EXAMENES/20-21/ejercicio3 /: Makefile  switch_case  switch_case.cc  switch_case.h  switch_case_main.cc
EXAMENES/20-21/ejercicio4/: box  box.cc
EXAMENES/21-22/ejercicio3/: guay_o_no_guay  guay_o_no_guay.cc
EXAMENES/21-22/ejercicio4/: Makefile  cars  cars.cc  cars.h  cars_main.cc
EXAMENES/22-23/ejercicio3/: Makefile  algoritmo_de_luhn  algoritmo_de_luhn.cc  algoritmo_de_luhn_main.cc
EXAMENES/22-23/ejercicio4/: clase_double_manager.h  double_manager.cc  double_manager_main.cc
EXAMENES/23-24/ejercicio3/: a.out  conjetura_de_collatz  conjetura_de_collatz.cc
EXAMENES/23-24/ejercicio4_mortal_nivel_sande/: robot.h  robot_main.cc
EXAMENES/pruebas/: a.out  amount_of_nums.cc  const_exp.cc  pruebas.cc
EXAMENES/pruebas/CMAKE/MiProyecto/: CMakeLists.txt  main.cc  main.h  main_main.cc
EXAMENES/pruebas/CMAKE/capitalize_vowels/: CMakeLists.txt
EXAMENES/pruebas/CMAKE/capitalize_vowels/src/: capitalize_vowels.cc  capitalize_vowels.h  capitalize_vowels_main.cc
EXAMENES/pruebas/Makefilepruebas/: Makefile  mensaje_inicial  mensaje_inicial.cc
EXAMENES/pruebas/arrays/: a.out  array_duplicados  array_duplicados.cc  buscar_mayor_y_menor  buscar_mayor_y_menor.cc  reordenar_array  reordenar_el_array  suma_de_elementos  suma_de_elementos.cc
EXAMENES/pruebas/clases/: a.out  clase_books  clase_books.cc  clase_cuenta_bancaria.cc  clase_libro.cc  clase_persona.cc  clase_rectangulo.cc
EXAMENES/pruebas/division_de_programas/: area_de_un_círculo  area_de_un_círculo.cc  area_de_un_círculo.h
EXAMENES/pruebas/lectura_de_ficheros/:  ficherosalida.txt   a.out  comparando_dos_archivos  comparando_dos_archivos.cc  contando_palabras  contando_palabras.cc  eliminando_lineas_vacias_de_un_fichero  eliminando_lineas_vacias_de_un_fichero.cc  enumerando_frases  enumerando_frases.cc  fichero_de_prueba.txt  imprimiendo_texto_en_panatalla  imprimiendo_texto_en_panatalla.cc  lectura_de_ficheros1.cc  palabras.txt  salida.txt
EXAMENES/pruebas/pruebas_de_programas/: a.out  cuadrado  cuadrado.cc  declaration-definition-header.cc  function-overloading  function-overloading.cc  good-function-example.cc  imprime_en_pantalla  imprime_en_pantalla.cc  programa1  programa1.cc  programa2  programa2.cc  prueba3  prueba3.cc  prueba_de_algoritmo_euclides  prueba_de_algoritmo_euclides.cc  prueba_movements  prueba_movements.cc  std-algorithm-examples  std-algorithm-examples.cc  toroide.cc
EXAMENES/pruebas/strings/: anagrama  rotate  (+8 more)
(+51 files in other folders)
